--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,6 +17,10 @@
     <dimen name="image_corner_radius">20dp</dimen>
     <dimen name="text_margin">20dp</dimen>
     <dimen name="line_width">1dp</dimen>
+    <dimen name="text_article_title">30sp</dimen>
+    <dimen name="margin_10dp">10dp</dimen>
+    <dimen name="padding_content_text">70dp</dimen>
+    <dimen name="browse_icon_height">45dp</dimen>
 
 
 </resources>
